--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # игнорировать файл
-# dark.css
+ 
+#stas.php
 
 # игнорировать файл в директории
 # js/my.js
 
 # игнорироать файл с расширением
-*.mp3
+#.mp3
